<resources>
    <string name="app_name">WWL Test Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="game_name">Викторина для профи</string>
    <string name="back_button_text">Не-а, ты останешься здесь! :)</string>
    <string name="coffee">Кофе</string>
    <string name="food">Еда</string>
    <string name="cats">Котики</string>
    <string name="dogs">Собачки</string>
    <string name="choose_text">Выбери, в чем ты профи:</string>
    <string name="question_coffee">Где латте?</string>
    <string name="question_food">Где лазанья?</string>
    <string name="question_cats">Где шотландец?</string>
    <string name="question_dogs">Где шпиц?</string>
    <string name="success">Правильно!</string>
    <string name="fail">А вот и нет :(</string>
    <string name="try_again">Попробовать снова</string>
</resources>