<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/choose_text"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/coffeeButton"
            style="@style/menuButton"
            android:minWidth="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coffee" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/foodButton"
            style="@style/menuButton"
            android:minWidth="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/catsButton"
            style="@style/menuButton"
            android:minWidth="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cats" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/dogsButton"
            style="@style/menuButton"
            android:minWidth="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dogs" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>